--- a/src/markdown/mas/maak_figuren_rapport.Rmd
+++ b/src/markdown/mas/maak_figuren_rapport.Rmd
@@ -1241,9 +1241,16 @@ plot_brms_fit <- function(model, x, species = "", axis_label = NULL, FUN = mean,
     axis_label <- x
   }
   
-  cat_vars <- model$data %>%
-    select(!where(is.numeric)) %>%
-    names()
+  if ("plotnaam" %in% names(model$data)) {
+    cat_vars <- model$data %>%
+      select(-plotnaam) %>%
+      select(!where(is.numeric)) %>%
+      names()
+  } else {
+    cat_vars <- model$data %>%
+      select(!where(is.numeric)) %>%
+      names()
+  }
   
   if (x %in% cat_vars) {
     plot_df <- model$data %>%
@@ -1286,8 +1293,9 @@ plot_brms_fit <- function(model, x, species = "", axis_label = NULL, FUN = mean,
     }
       
   } else {
-    means_df <- model$data %>%
-      select_at(vars(-"aantal", -x)) %>%
+    if ("plotnaam" %in% names(model$data)) {
+      means_df <- model$data %>%
+      select_at(vars(-c("aantal", "plotnaam"), -x)) %>%
       group_by_at(cat_vars) %>%
       mutate(across(where(is.numeric), ~FUN(.x))) %>%
       ungroup() %>%
@@ -1306,9 +1314,35 @@ plot_brms_fit <- function(model, x, species = "", axis_label = NULL, FUN = mean,
     # Expand the grid with combinations of categories and the corresponding range values
     plot_df <- full_join(means_df, range_df) %>%
       unnest(value_range) %>%
-      `colnames<-`(c(names(model$data)[-match(c("aantal", x), 
+      `colnames<-`(c(names(model$data)[-match(c("aantal", "plotnaam", x), 
                                               names(model$data))], x)) %>%
-      add_epred_draws(model, ndraws = 3000)
+      add_epred_draws(model, ndraws = 3000, re_formula = NA)
+    } else {
+      means_df <- model$data %>%
+        select_at(vars(-"aantal", -x)) %>%
+        group_by_at(cat_vars) %>%
+        mutate(across(where(is.numeric), ~FUN(.x))) %>%
+        ungroup() %>%
+        distinct()
+      
+      range_df <- model$data %>%
+        group_by_at(cat_vars) %>%
+        summarize(min_var = min(!!sym(x)), max_var = max(!!sym(x)))
+      
+      # Create a sequence of 100 values for each group
+      range_df <- range_df %>%
+        rowwise() %>%
+        mutate(value_range = list(seq(min_var, max_var, length.out = n))) %>%
+        select(-c(max_var, min_var))
+      
+      # Expand the grid with combinations of categories and the corresponding range values
+      plot_df <- full_join(means_df, range_df) %>%
+        unnest(value_range) %>%
+        `colnames<-`(c(names(model$data)[-match(c("aantal", x), 
+                                                names(model$data))], x)) %>%
+        add_epred_draws(model, ndraws = 3000)
+    }
+    
     
     out <- plot_df %>%
       ggplot(aes(x = .data[[x]]*factor))
@@ -1333,11 +1367,10 @@ plot_brms_fit <- function(model, x, species = "", axis_label = NULL, FUN = mean,
     
     if (length(cat_vars) == 1) {
       out <- out +
-        facet_wrap(vars(!!sym(cat_vars)), scales = "free_x")
-    } else if (length(cat_vars) > 2) {
+        facet_wrap(vars(!!sym(cat_vars)))
+    } else if (length(cat_vars) >= 2) {
       out <- out +
-        facet_grid(vars(!!sym(cat_vars[1])), vars(!!sym(cat_vars[2])),
-                   scales = "free_x")
+        facet_grid(vars(!!sym(cat_vars[1])), vars(!!sym(cat_vars[2])))
     }
   }
   return(out)
@@ -1351,21 +1384,47 @@ cont_vars <- mod_final_olpropsb_list$Veldleeuwerik$data %>%
     names()
 
 for (pred in cont_vars) {
-  plot_brms_fit(mod_final_olpropsb_list$Veldleeuwerik, pred,
-                interval = c(0, 0.95)) %>%
-    print()
+  p <- plot_brms_fit(mod_final_olpropsb_list$Veldleeuwerik, pred,
+                interval = c(0, 0.95), show_data = TRUE)
+  file <- paste(pred, "veldleeuwerik_data.pdf", sep = "_")
+  ggsave(here("media", "beheerovereenkomsten", "oostelijke_leemstreek", file),
+         p,
+         dpi = 300,
+         width = 8,
+         height = 6)
 }
-
-plot_brms_fit(mod_final_olpropsb_list$Veldleeuwerik, "area_prop_sb_cat",
-              interval = c(0, 0.95))
-
-plot_brms_fit(mod_final_olpropsb_list$Veldleeuwerik, "boom",
-              interval = c(0, 0.95), show_data = TRUE)
-
-plot_brms_fit(mod_final_olpropsb_list$Veldleeuwerik, "area_prop_sb_cat",
-              interval = c(0, 0.95), show_data = TRUE)
 ```
 
+```{r}
+out_list_olpropsb <- vector("list", 
+                          length = length(mod_final_olpropsb_list))
+for (i in seq_along(mod_final_olpropsb_list)) {
+  spec <- names(mod_final_olpropsb_list)[i]
+  df_out_spec <- mod_final_olpropsb_list[[spec]] %>%
+    gather_draws(`b_.*`, regex = TRUE) %>%
+    filter(!grepl("(Intercept)", .variable)) %>%
+    mutate(.value = exp(.value) - 1) %>%
+    summarise(
+      schatting = median(.value),
+      standaardfout = sd(.value),
+      lcl = quantile(.value, 0.025),
+      ucl = quantile(.value, 0.975)
+    ) %>%
+    mutate(variabele = gsub("b_", "", .variable),
+           soort = spec,
+           regio = "Oostelijke leemstreek") %>%
+    select(-.variable) %>%
+    select(soort, regio, variabele, everything()) %>%
+    arrange(desc(schatting))
+  
+  out_list_olpropsb[[i]] <- df_out_spec
+}
+
+# add effects
+out_df_olpropsb <- do.call(rbind.data.frame,
+                           lapply(out_list_olpropsb, get_effects))
+draws_olpropsb_list_wt
+```
 
 ## De Moeren
 
